--- a/org.angriff.eva.parent/pom.xml
+++ b/org.angriff.eva.parent/pom.xml
@@ -18,20 +18,20 @@
 			<email>palador@projektangriff.de</email>
 		</developer>
 	</developers>
-	
-	<repositories>
-		<repository>
-			<id>helios</id>
-			<layout>p2</layout>
-			<url>http://download.eclipse.org/eclipse/updates/3.7</url>
-		</repository>
-		<repository>
-			<id>emf</id>
-			<layout>p2</layout>
-			<url>http://download.eclipse.org/modeling/emf/updates</url>
-		</repository>
-	</repositories>
-	
+
+	<!-- <repositories> -->
+	<!-- <repository> -->
+	<!-- <id>helios</id> -->
+	<!-- <layout>p2</layout> -->
+	<!-- <url>http://download.eclipse.org/eclipse/updates/3.7</url> -->
+	<!-- </repository> -->
+	<!-- <repository> -->
+	<!-- <id>emf</id> -->
+	<!-- <layout>p2</layout> -->
+	<!-- <url>http://download.eclipse.org/modeling/emf/updates</url> -->
+	<!-- </repository> -->
+	<!-- </repositories> -->
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<tycho-version>0.14.0</tycho-version>
@@ -53,6 +53,9 @@
 				<artifactId>tycho-maven-plugin</artifactId>
 				<version>${tycho-version}</version>
 				<extensions>true</extensions>
+				<configuration>
+					<eclipse.p2.mirrors>false</eclipse.p2.mirrors>
+				</configuration>
 			</plugin>
 
 			<plugin>
@@ -72,6 +75,7 @@
 				<version>${tycho-version}</version>
 
 				<configuration>
+					<eclipse.p2.mirrors>false</eclipse.p2.mirrors>
 					<resolver>p2</resolver>
 					<pomDependencies>consider</pomDependencies>
 					<target>
